# snoy-extra

./: README.md  snoy-extra.cabal
Control/Monad/: MWC.hs
Data/: VectorRef.hs  Word8Carry.hs
Data/Conduit/: Cassava.hs
Data/Streaming/: Universal.hs
bench/: mwc-bytestring.hs  word8-carry.hs
test/Control/Monad/: MWCSpec.hs
test/Data/: VectorRefSpec.hs  Word8CarrySpec.hs
test/Data/Conduit/: CassavaSpec.hs
