name:                snoy-extra
version:             0.1.0.0
synopsis:            Various Haskell utilities that don't necessarily deserve to be published
description:         See README.md
homepage:            https://github.com/snoyberg/snoy-extra
license:             MIT
license-file:        LICENSE
author:              Michael Snoyman
maintainer:          michael@snoyman.com
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Data.VectorRef
  build-depends:       base >= 4.7 && < 5
                     , primitive
                     , vector
  default-language:    Haskell2010

test-suite spec
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Data.VectorRefSpec
  build-depends:       base
                     , snoy-extra
                     , hspec
                     , QuickCheck

source-repository head
  type:     git
  location: git://github.com/snoyberg/snoy-extra.git
