name:                snoy-extra
version:             0.1.0.0
synopsis:            Various Haskell utilities that don't necessarily deserve to be published
description:         See README.md
homepage:            https://github.com/snoyberg/snoy-extra
license:             MIT
license-file:        LICENSE
author:              Michael Snoyman
maintainer:          michael@snoyman.com
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Data.VectorRef
                       Control.Monad.MWC
                       Data.Conduit.Cassava
                       Data.Word8Carry
                       Data.Streaming.Universal
  build-depends:       base >= 4.7 && < 5
                     , primitive
                     , vector
                     , bytestring
                     , mtl
                     , mwc-random
                     , text
                     , word8
                     , mono-traversable
                     , transformers-base
                     , classy-prelude-conduit
                     , cassava
                     , ghc-prim
                     , conduit-combinators
  default-language:    Haskell2010

test-suite spec
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Data.VectorRefSpec
                       Control.Monad.MWCSpec
                       Data.Conduit.CassavaSpec
                       Data.Word8CarrySpec
  build-depends:       base
                     , snoy-extra
                     , hspec
                     , QuickCheck
                     , text
                     , classy-prelude-conduit
                     , cassava
                     , conduit-extra

benchmark mwc-bytestring
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      bench
  build-depends:       base
                     , snoy-extra
                     , criterion
                     , mtl
  main-is:             mwc-bytestring.hs
  ghc-options:         -Wall -O2 -rtsopts

benchmark word8-carry
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      bench
  build-depends:       base
                     , snoy-extra
                     , criterion
  main-is:             word8-carry.hs
  ghc-options:         -Wall -O2 -rtsopts

source-repository head
  type:     git
  location: git://github.com/snoyberg/snoy-extra.git
